--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "Resume",
+  "name": "resume",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "md2resume --template standard resume.md"
   },
   "keywords": [],
   "author": "",
